deploy/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    kargo.akuity.io/project: "true"
    kargo.akuity.io/keep-namespace: "true"
