deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-dev
  namespace: blog
spec:
  selector:
    app: blog-deva
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
