deploy/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-dev
  namespace: blog
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "blog.int.kyledev.co"
  rules:
    - backendRefs:
        - name: blog-dev
          port: 8080
